--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,12 @@
 
 
-----> Let the user be able to choose a network adapter
+----> Let the user be able to choose a network adapter (FIGURE OUT A WAY TO OUTPUT A RETURN OF A FUNCTION IN SWING)
+        Solution:
+            Instead of using nif selector, use manually core.Pcaps.findAllDevs and loop in each network interface
+            Don't forget to handle the user choice (simulate nif.doSelect in swing)
+
 ----> Let the user be able to choose how much time/packets to handle
+
 ----> Give the size of all the packets
+
 ----> Use whois to let the user know what IP is being responsible for most of the traffic
