--- a/TODO.txt
+++ b/TODO.txt
@@ -1,11 +1,10 @@
+DONE ----> Manually look for interfaces and loop through them and add scroll
 
+----> Set gaps on the button and the text area
 
-----> Let the user be able to choose a network adapter (FIGURE OUT A WAY TO OUTPUT A RETURN OF A FUNCTION IN SWING)
-        Solution:
-            Instead of using nif selector, use manually core.Pcaps.findAllDevs and loop in each network interface
-            Don't forget to handle the user choice (simulate nif.doSelect in swing)
+----> Make text area and button be relative to window size
 
---> Make text area and button be relative to window size
+----> Let user choose which device to monitor
 
 ----> Let the user be able to choose how much time/packets to handle
 
