Output sniffed packets onto GUI

--- a/TODO.txt
+++ b/TODO.txt
@@ -16,7 +16,7 @@ DONE ----> Create error message
 
 DONE ----> Call the function to monitor network with user input
 
-----> Make sniffed packets visible in the GUI (THE PACKETS WILL ONLY APPEAR AFTER THE LOOP IS DONE)
+DONE ----> Make sniffed packets visible in the GUI (THE PACKETS WILL ONLY APPEAR AFTER THE LOOP IS DONE)
         We are better off using concurrency here!
 
 ----> To be able to stop during the sniffing, add a button to cancel
