--- a/TODO.txt
+++ b/TODO.txt
@@ -20,7 +20,7 @@ DONE ----> Make sniffed packets visible in the GUI (THE PACKETS WILL ONLY APPEAR
 DONE ----> To be able to stop during the sniffing, add a button to "end sniff"
 
 ----> Be able to resume the thread after pausing it!
-    IDEAS: Destroy the thread on pause and create a new thread on resume;
+    IDEAS: Destroy the thread on pause and create a new thread on resume
 
 ----> After sniffing, give the user the statistics of the whole process, and possibly the duration of the sniffing
 
