--- a/TODO.txt
+++ b/TODO.txt
@@ -23,19 +23,26 @@ DONE ----> Be able to resume the thread after pausing it!
 
 DONE ----> Change what is shown on the main output
 
-----> After sniffing, give the user the statistics of the whole process, and possibly the duration of the sniffing
+DONE ----> Output the stats at the end of the sniff
 
 DONE ----> Probably make another class for packet sniffing frames
 
 DONE ----> Make sniffing window resizable
 
+----> Kill all threads when end of sniff button is pressed
+
+
 FEATURES
+
+----> Hugeeee refactor of all code
 
 ----> After scroll up, continue to scroll down when scroll is put back to the bottom
 
 ----> Make every packet clickable to see details about each packet
 
 ----> Make app run in the background and use it as a bandwith monitor
+
+----> Make interfaces clickable
 
 ----> If being used as bandwith monitor, show most used services
 
