--- a/TODO.txt
+++ b/TODO.txt
@@ -41,6 +41,8 @@ DONE ----> Also kill first thread on End sniff button pressed
 
 ----> Make app run in the background and use it as a bandwith monitor
 
+----> Possibly make another class for the toolbar
+
 ----> While sniffing, print out some statistics
 
 ----> Make interfaces clickable
