--- a/TODO.txt
+++ b/TODO.txt
@@ -39,11 +39,13 @@ DONE ----> Also kill first thread on End sniff button pressed
 
 ----> Make every packet clickable to see details about each packet (open a new frame with all the data that can be printed)
 
-----> Make app run in the background and use it as a bandwith monitor
+DONE ----> Make app run in the background and use it as a bandwith monitor (program running in the system tray)
+
+DONE ----> Add a new icon to the program and don't forget to use it in the sys tray when running in the background
 
 ----> Possibly make another class for the toolbar
 
-----> While sniffing, print out some statistics
+----> While sniffing, print out some statistics (Possibly more concurrency, which means, thread work)
 
 ----> Make interfaces clickable
 
