--- a/TODO.txt
+++ b/TODO.txt
@@ -45,6 +45,8 @@ DONE ----> Add a new icon to the program and don't forget to use it in the sys t
 
 ----> Possibly make another class for the toolbar
 
+----> Make end message a popup instead of writing it out (possibly stats too)
+
 ----> While sniffing, print out some statistics (Possibly more concurrency, which means, thread work)
 
 ----> Make interfaces clickable
